# AI-Cofounder

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
data/: cofounder.db-shm
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/assumptions/: page.tsx
frontend/app/call/: page.tsx
frontend/app/commitments/: page.tsx
frontend/app/decisions/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/onboard/: page.tsx
frontend/app/session/: page.tsx
frontend/components/: ChatMessage.tsx
frontend/lib/: api.ts
src/: cli.py
src/api/: main.py  routes.py
src/brain/: knowledge.py  pushback.py  session.py  tracker.py
src/llm/: chains.py  client.py  prompts.py
src/memory/: extractor.py  retriever.py  store.py  vectors.py
